# eigenutils

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  test_dims.cpp  test_fileio.cpp
src/eigenutils/core/: geometry.hpp  matrix.hpp  real.hpp  sparsematrix.hpp
src/eigenutils/io/: sparsematrixio.hpp
src/libeigenutils/: CMakeLists.txt
src/libeigenutils/include/eigenutils/: typedefs.h
src/libeigenutils/test/: test_dims.cpp  test_fileio.cpp
test/: CMakeLists.txt
test/unittests/: test_core.cpp  test_core_sparsemat.cpp  test_dims.cpp  test_fileio.cpp
